--- a/libs/first-20240511/project.json
+++ b/libs/first-20240511/project.json
@@ -1,8 +1,8 @@
 {
   "name": "first-20240511",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "apps/first-20240511/src",
-  "projectType": "application",
+  "sourceRoot": "libs/first-20240511/src",
+  "projectType": "library",
   "tags": [],
   "// targets": "to see all targets run: nx show project first-20240511 --web",
   "targets": {}
