--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
   "dependencies": {
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "three": "^0.164.1"
+    "react-router-dom": "6.23.1",
+    "three": "^0.164.1",
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
     "@nx/eslint": "19.0.4",
     "@nx/eslint-plugin": "19.0.4",
     "@nx/js": "19.0.4",
